--- a/styles/style.css
+++ b/styles/style.css
@@ -38,4 +38,81 @@ color: #FFF;}
 }
 .pic{width: 111px;
     height: 26px;
+   }
+
+.box-container{display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;height: 80%;width: 80%;
+
+}
+.box-tittle{width: 320px;margin: 0px 30px;
+    height: 476px;
+margin-left: 50px;
+border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+.popular{color: #3A3A3A;
+    font-family: Poppins;
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+    padding: 40px;
+  }
+  .box-img{width: 350px;width: 300px;
+    height: 256px;
     flex-shrink: 0;}
+    .box-head{color:  #18191F;
+        font-family: Poppins;
+        font-size: 22px;
+      
+        font-weight: 600;
+       }
+       .box-doller{color: rgba(0, 0, 0, 0.87);
+        font-family: Inter;
+        font-size: 20px;
+       
+        font-weight: 400;
+      }
+
+
+       .box-para{color:  #787885;
+        font-family: Inter;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 143%; 
+        letter-spacing: 0.252px;
+    width: 190px;}
+
+    .feature-container{display: flex;
+      gap: 50px;justify-content: center;gap: 100px;padding: 90px;}
+
+.por{margin-left: 10px;}
+.btn{
+    padding: 10px 24px;
+  
+    gap: 8px;background: #E02C6D;
+color: #FFF;border: none;}
+
+.box-footer{background: #0A0826;height: 200px;padding: 50px;
+    text-align: center;
+    color: white;}
+.footer-para{
+    color:  #D9DBE1;
+font-family: Manrope;
+font-size: 14px;
+
+font-weight: 700;
+height: 100%;
+width: 100%;
+
+}
+.dir{}
+
+
+   @media screen and (max-width:575px) {.container{flex-direction: column;}
+    .card-container{flex-direction: column;margin-left: 200px;margin-top: -20px;}
+  .box-container{grid-template-columns: auto;display: grid;}
+.feature-container{flex-direction: column;margin-right: 40px;}
+}
